--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </head>
   <body>
     <div id="app"></div>
-  	<script type="text/javascript" src="/dist/vendor.js"></script><script type="text/javascript" src="/dist/build.js"></script><script type="text/javascript" src="/dist/common.js"></script></body>
+  	<script type="text/javascript" src="dist/vendor.d81f52146f76181099db.js"></script><script type="text/javascript" src="dist/build.cf839c745b5c393cf786.js"></script><script type="text/javascript" src="dist/common.4461daf2045480d9ad74.js"></script></body>
 </html>
