--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </head>
   <body>
     <div id="app"></div>
-  	<script type="text/javascript" src="vendor.4e7fc9ae55a331baae18.js"></script><script type="text/javascript" src="build.3680a6aca977c621e450.js"></script><script type="text/javascript" src="common.913624e41d1a496e0b0a.js"></script></body>
+  	<script type="text/javascript" src="/dist/vendor.js"></script><script type="text/javascript" src="/dist/build.js"></script><script type="text/javascript" src="/dist/common.js"></script></body>
 </html>
