--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </head>
   <body>
     <div id="app"></div>
-  	<script type="text/javascript" src="/dist/vendor.js"></script><script type="text/javascript" src="/dist/build.js"></script><script type="text/javascript" src="/dist/common.js"></script></body>
+  	<script type="text/javascript" src="vendor.4c516d1f29d500850b75.js"></script><script type="text/javascript" src="build.7e8e19872c39d2fe5ca1.js"></script><script type="text/javascript" src="common.f557e4b227eebbbc8266.js"></script></body>
 </html>
